fixed horizontal scroll problem

--- a/src/components/CardContainer/style.css
+++ b/src/components/CardContainer/style.css
@@ -1,4 +1,4 @@
 .cardCol {
     padding-right: 0rem;
-    padding-left: 1rem;
+    padding-left: 0rem;
 }
