--- a/src/components/jumbotron/style.css
+++ b/src/components/jumbotron/style.css
@@ -8,6 +8,6 @@
     /* border: none; */
 }
 
-.mr-2 {
-    
+.mr-2, .mb-5 {
+    color: black;
 }
